--- a/jeffrey/style.css
+++ b/jeffrey/style.css
@@ -87,7 +87,7 @@
       margin-left: -10px;
       width: 100%;
     }
-    .name3{
+    .jeff3{
       margin-right: 65px;
       width: 100px;
     }
