--- a/jeffrey/style.css
+++ b/jeffrey/style.css
@@ -56,15 +56,15 @@
   }
   
   .jeff{
-    background-color: #6a5acd;
+    background-color: 	#ff0040;
   }
   
   .jeff2{
     color: white;
-    background-color: #FF0000;
+    background-color: 	#ff00ff;
   }
   .jeff3{
-    background-color: #FFFF00;
+    background-color:  	#00ff80;
   }
   
   
